feat(backend): enhance default value constructors and improve utility function handling
- Refactored `renderUtilityDefaultValueExpr` to use `renderBuiltinDefaultConstructorExpr` for generating constructor calls with appropriate suffixes.
- Updated handling of default values for `NodePath` and typed arrays to ensure correct constructor usage.
- Added support for `Transform2D` and `Transform3D` default value constructors.
- Introduced new utility methods in `CGenHelper` for rendering built-in constructor names based on argument types.